--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: python
+
 python:
   - "3.6"
+
+before_install:
+  - pip install python-coveralls
 
 script:
   - python setup.py validate
