--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
-flask==0.12.2
-httplib2==0.10.3
-werkzeug==0.14.1
+certifi==2018.1.18
+chardet==3.0.4
+click==6.7
+Flask==0.12.2
 Flask-Dance==0.13.0
-gunicorn==19.7.1
+idna==2.6
+itsdangerous==0.24
+Jinja2==2.10
+lazy==1.3
+MarkupSafe==1.0
+oauthlib==2.0.6
+requests==2.18.4
+requests-oauthlib==0.8.0
+six==1.11.0
+urllib3==1.22
+URLObject==2.4.3
+Werkzeug==0.14.1
