--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_install:
   - pip install python-coveralls
 
 script:
-  - python setup.py validate
+  - python setup.py test
+  - python setup.py flake8 || true
 
 after_success:
   - coveralls
