Re-ignore run configurations which could accidentally leak secret keys

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,7 @@ $RECYCLE.BIN/
 
 
 # End of https://www.gitignore.io/api/linux,macos,python,windows,pycharm
+
+# Ignore certain run configurations that can contain secret information
+.idea/runConfigurations/Flask__Production_.xml
+.idea/runConfigurations/Flask__Debug_.xml
